package clase_6.modulo_de_Stock_y_Precios;

public interface Vendible {
    String getDescripcion();
    double getPrecio();
    int getStock();
}
